--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.neu.madcourse.theloop">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,10 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TheLoop">
-        android:usesCleartextTraffic="true"
-        <activity android:name=".GetStartedScrollActivity"></activity>
-        <activity android:name=".RegisterUser"></activity>
-        <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".chatActivity"></activity>
+        <activity android:name=".GetStartedScrollActivity" />
+        <activity android:name=".RegisterUser" />
+        <activity android:name=".ProfileActivity" />
         <activity android:name=".MainLoginActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
