--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TheLoop">
-        <activity android:name=".MessageActivity"></activity>
+        <activity android:name=".EnterPersonalDetailsActivity"></activity>
+        <activity android:name=".MessageActivity" />
+        <activity android:name=".InitialAppInfoActivity" />
         <activity android:name=".chatActivity" />
         <activity android:name=".GetStartedScrollActivity" />
         <activity android:name=".RegisterUser" />
